[gd_scene load_steps=15 format=3 uid="uid://bqappyv0tbfj8"]

[ext_resource type="Script" path="res://UI/UI Scenes/ui_map_select.gd" id="1_troxi"]
[ext_resource type="Texture2D" uid="uid://dv6rfqu2nv3yv" path="res://Textures/Raw/_Map_T.JPG" id="3_audu7"]
[ext_resource type="Script" path="res://UI/UI Scenes/area_map.gd" id="3_qwteu"]
[ext_resource type="FontFile" uid="uid://cajh22w8vlvat" path="res://UI/Fonts/FontAdv_FD_224_B.fnt" id="6_ko8f5"]
[ext_resource type="PackedScene" uid="uid://caqwf33ytyrgi" path="res://UI/Elements/arrow_left.tscn" id="6_q567h"]
[ext_resource type="Script" path="res://UI/UI Scenes/level_info.gd" id="6_syq3h"]
[ext_resource type="PackedScene" uid="uid://b55bnrrpuay6o" path="res://UI/Elements/map_preview.tscn" id="8_neujb"]
[ext_resource type="Script" path="res://UI/UI Scenes/level_list.gd" id="9_c7tps"]
[ext_resource type="PackedScene" uid="uid://dtagxtnrouwmx" path="res://UI/Elements/arrow_right.tscn" id="9_yupac"]
[ext_resource type="PackedScene" uid="uid://cfdtvarord05o" path="res://UI/Elements/no_button.tscn" id="12_h6eoq"]
[ext_resource type="PackedScene" uid="uid://uq5yblxndrcy" path="res://UI/Elements/difficulty_button.tscn" id="13_mxamf"]
[ext_resource type="PackedScene" uid="uid://n653ro3f33ss" path="res://UI/Elements/ok_button.tscn" id="13_pst2v"]
[ext_resource type="PackedScene" uid="uid://c5u8snsktlbjx" path="res://UI/Elements/ok_shine.tscn" id="14_dorvl"]
[ext_resource type="Texture2D" uid="uid://bety2ob4yg7gq" path="res://Textures/custom/custom_brick.png" id="14_wx7f2"]

[node name="ui_map_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_troxi")

[node name="area_map" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -384.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_qwteu")

[node name="hide_wall" type="TextureRect" parent="area_map"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -512.0
offset_right = 512.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("14_wx7f2")

[node name="hide_wall2" type="TextureRect" parent="area_map"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_top = -1024.0
offset_right = 512.0
grow_horizontal = 2
texture = ExtResource("14_wx7f2")

[node name="map_bg" type="Sprite2D" parent="area_map"]
position = Vector2(512, 384)
texture = ExtResource("3_audu7")
region_enabled = true
region_rect = Rect2(0, 0, 1024, 768)

[node name="stage_selector" type="VBoxContainer" parent="area_map"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -424.0
offset_right = 424.0
offset_bottom = 161.0
grow_horizontal = 2

[node name="level_info" type="Label" parent="area_map/stage_selector"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_ko8f5")
theme_override_font_sizes/font_size = 24
text = "placeholder"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_syq3h")

[node name="stage_select_list" type="HBoxContainer" parent="area_map/stage_selector"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="vertical_margin_l" type="MarginContainer" parent="area_map/stage_selector/stage_select_list"]
layout_mode = 2
size_flags_vertical = 4

[node name="arrow_left" parent="area_map/stage_selector/stage_select_list/vertical_margin_l" instance=ExtResource("6_q567h")]
layout_mode = 2

[node name="level_list" type="HBoxContainer" parent="area_map/stage_selector/stage_select_list"]
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("9_c7tps")

[node name="map_preview1" parent="area_map/stage_selector/stage_select_list/level_list" instance=ExtResource("8_neujb")]
layout_mode = 2

[node name="map_preview2" parent="area_map/stage_selector/stage_select_list/level_list" instance=ExtResource("8_neujb")]
layout_mode = 2

[node name="map_preview3" parent="area_map/stage_selector/stage_select_list/level_list" instance=ExtResource("8_neujb")]
layout_mode = 2

[node name="map_preview4" parent="area_map/stage_selector/stage_select_list/level_list" instance=ExtResource("8_neujb")]
layout_mode = 2

[node name="map_preview5" parent="area_map/stage_selector/stage_select_list/level_list" instance=ExtResource("8_neujb")]
layout_mode = 2

[node name="vertical_margin_r" type="MarginContainer" parent="area_map/stage_selector/stage_select_list"]
layout_mode = 2
size_flags_vertical = 4

[node name="arrow_right" parent="area_map/stage_selector/stage_select_list/vertical_margin_r" instance=ExtResource("9_yupac")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="area_map"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -460.0
offset_top = -81.0
offset_right = 460.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 135
alignment = 1

[node name="back_button" parent="area_map/HBoxContainer" instance=ExtResource("12_h6eoq")]
layout_mode = 2
text = "back"

[node name="difficulty_button" parent="area_map/HBoxContainer" instance=ExtResource("13_mxamf")]
layout_mode = 2

[node name="ok_shine" parent="area_map/HBoxContainer" instance=ExtResource("14_dorvl")]
layout_mode = 2
size_flags_horizontal = 4

[node name="start_button" parent="area_map/HBoxContainer/ok_shine" instance=ExtResource("13_pst2v")]
layout_mode = 1
text = "Start"

[connection signal="clicked" from="area_map/stage_selector/stage_select_list/vertical_margin_l/arrow_left" to="area_map" method="_on_arrow_left_clicked"]
[connection signal="level_clicked" from="area_map/stage_selector/stage_select_list/level_list/map_preview1" to="area_map/stage_selector/stage_select_list/level_list" method="_on_map_preview_1_level_clicked"]
[connection signal="level_clicked" from="area_map/stage_selector/stage_select_list/level_list/map_preview2" to="area_map/stage_selector/stage_select_list/level_list" method="_on_map_preview_2_level_clicked"]
[connection signal="level_clicked" from="area_map/stage_selector/stage_select_list/level_list/map_preview3" to="area_map/stage_selector/stage_select_list/level_list" method="_on_map_preview_3_level_clicked"]
[connection signal="level_clicked" from="area_map/stage_selector/stage_select_list/level_list/map_preview4" to="area_map/stage_selector/stage_select_list/level_list" method="_on_map_preview_4_level_clicked"]
[connection signal="level_clicked" from="area_map/stage_selector/stage_select_list/level_list/map_preview5" to="area_map/stage_selector/stage_select_list/level_list" method="_on_map_preview_5_level_clicked"]
[connection signal="clicked" from="area_map/stage_selector/stage_select_list/vertical_margin_r/arrow_right" to="area_map" method="_on_arrow_right_clicked"]
[connection signal="button_clicked" from="area_map/HBoxContainer/back_button" to="." method="_on_back_button_button_clicked"]
[connection signal="button_clicked" from="area_map/HBoxContainer/ok_shine/start_button" to="." method="_on_start_button_button_clicked"]
